--- a/tests/slider.html
+++ b/tests/slider.html
@@ -5,9 +5,9 @@
     <script type="text/javascript" src="angular.js"></script>
     <script type="text/javascript" src="angular-touch.js"></script>
 
-    <script type="text/javascript" src="vs_angular.js"></script>
-    <link rel="stylesheet" type="text/css" href="generic.css"></link>
-    <link rel="stylesheet" type="text/css" href="flat.css"></link>
+    <script type="text/javascript" src="../build/vs_angular.js"></script>
+    <link rel="stylesheet" type="text/css" href="../build/generic.css"></link>
+    <link rel="stylesheet" type="text/css" href="../build/flat.css"></link>
     <script src="//localhost:35729/livereload.js"></script>
 
 </head>
