Remove </script> tag

--- a/tests/images.html
+++ b/tests/images.html
@@ -24,4 +24,5 @@
   <vs-image src="imageTest.jpg" strech="fill"></vs-image>
   <vs-image src="imageTest.jpg" strech="uniform"></vs-image>
   <vs-image src="imageTest.jpg" strech="uniform-fill"></vs-image>
-</body></html>
+</body>
+</html>
