Add a SplitView test

--- a/tests/splitView.html
+++ b/tests/splitView.html
@@ -19,6 +19,7 @@
 
 </head>
 <body class="application flow_layout">
+
   <vs-split-view>
     
     <vs-main-panel class="flow_layout">
@@ -28,7 +29,11 @@
       <vs-image src="imageTest.jpg" strech="uniform-fill"></vs-image>
     </vs-main-panel>
 
-    <vs-secondary-panel>
+    <vs-secondary-panel class="vertical_layout">
+      <vs-button style="white">Default White</vs-button>
+      <vs-button style="grey">Default Grey</vs-button>
+      <vs-button style="green">Default Green</vs-button>
+      <vs-button style="red">Default Red</vs-button>
     </vs-secondary-panel>
   
   </vs-split-view>
