Update test with new SplitView API

--- a/tests/splitView.html
+++ b/tests/splitView.html
@@ -20,21 +20,21 @@
 </head>
 <body class="application flow_layout">
 
-  <vs-split-view>
+  <vs-split-view orientation="horizontal">
     
-    <vs-main-panel class="flow_layout">
-      <vs-image src="imageTest.jpg" strech="none"></vs-image>
-      <vs-image src="imageTest.jpg" strech="fill"></vs-image>
-      <vs-image src="imageTest.jpg" strech="uniform"></vs-image>
-      <vs-image src="imageTest.jpg" strech="uniform-fill"></vs-image>
-    </vs-main-panel>
-
-    <vs-secondary-panel class="vertical_layout">
+    <div class="vertical_layout">
       <vs-button style="white">Default White</vs-button>
       <vs-button style="grey">Default Grey</vs-button>
       <vs-button style="green">Default Green</vs-button>
       <vs-button style="red">Default Red</vs-button>
-    </vs-secondary-panel>
+    </div>
+
+    <div class="flow_layout">
+      <vs-image src="imageTest.jpg" strech="none"></vs-image>
+      <vs-image src="imageTest.jpg" strech="fill"></vs-image>
+      <vs-image src="imageTest.jpg" strech="uniform"></vs-image>
+      <vs-image src="imageTest.jpg" strech="uniform-fill"></vs-image>
+    </div>
   
   </vs-split-view>
 
