--- a/tests/list.html
+++ b/tests/list.html
@@ -9,15 +9,53 @@
     <link rel="stylesheet" type="text/css" href="../build/generic.css"></link>
     <link rel="stylesheet" type="text/css" href="../build/flat.css"></link>
     <script src="//localhost:35729/livereload.js"></script>
-
+    <style type="text/css">
+    .vs_ui_list {
+      height: auto;
+    }
+    </style>
 </head>
-<body class="theme application vertical_layout">
+<body class="theme application horizontal_layout">
 
-  <vs-list>
-    <li>toto</li>
-    <li>toto</li>
-    <li>toto</li>
-  </vs-list>
+  <div class="vertical_layout" style="width:50%">
+    <vs-list>
+      <li>item1</li>
+      <li>item2</li>
+      <li>item3</li>
+    </vs-list>
+
+    <br />
+
+    <vs-list title="item 1" class="tab_list arrow">
+      <li>item1.1</li>
+      <li>item1.2</li>
+      <li>item1.3</li>
+    </vs-list>
+
+    <vs-list class="tab_list">
+      <div>Item 1</div>
+      <li>item1.1</li>
+      <li>item1.2</li>
+      <li>item1.3</li>
+      <div>Item 2</div>
+      <li>item2.1</li>
+      <li>item2.2</li>
+    </vs-list>
+
+  </div>
+  <div class="vertical_layout" style="width:50%">
+    <vs-list class="block_list" title="Item 1">
+      <li>item1.1</li>
+      <li>item1.2</li>
+      <li>item1.3</li>
+    </vs-list>
+    <vs-list class="block_list"  title="Item 2">
+      <div>Item 2</div>
+      <li>item2.1</li>
+      <li>item2.2</li>
+    </vs-list>
+  </div>
+
 
 
   <span>{{momoBis}}</span>
