--- a/tests/buttons.html
+++ b/tests/buttons.html
@@ -15,19 +15,19 @@
 
   <vs-button></vs-button>
   <vs-button>Coco</vs-button>
-  <vs-button style="white">Default White</vs-button>
-  <vs-button style="grey">Default Grey</vs-button>
-  <vs-button style="green">Default Green</vs-button>
-  <vs-button style="red">Default Red</vs-button>
-  <vs-button type="nav">Nav</vs-button>
-  <vs-button type="nav" style="black">Nav</vs-button>
-  <vs-button type="nav" style="red">Nav</vs-button>
-  <vs-button type="nav" style="green">Nav</vs-button>
-  <vs-button type="nav_back">Nav Back</vs-button>
-  <vs-button type="nav_back" style="black">Nav Back</vs-button>
-  <vs-button type="nav_back" style="red">Nav Back</vs-button>
-  <vs-button type="nav_back" style="green">Nav Back</vs-button>
-  <vs-button type="nav_forward">Nav Forward</vs-button>
+  <vs-button class="white default">Default White</vs-button>
+  <vs-button class="grey">Default Grey</vs-button>
+  <vs-button class="green">Default Green</vs-button>
+  <vs-button class="red">Default Red</vs-button>
+  <vs-button class="nav">Nav</vs-button>
+  <vs-button class="nav black">Nav</vs-button>
+  <vs-button class="nav red">Nav</vs-button>
+  <vs-button class="nav green">Nav</vs-button>
+  <vs-button class="nav_back">Nav Back</vs-button>
+  <vs-button class="nav_back black">Nav Back</vs-button>
+  <vs-button class="nav_back red">Nav Back</vs-button>
+  <vs-button class="nav_back green">Nav Back</vs-button>
+  <vs-button class="nav_forward">Nav Forward</vs-button>
 
   <vs-segmented-button ng-model="modelSB">
     <div>Item 1</div>
