--- a/tests/buttons.html
+++ b/tests/buttons.html
@@ -35,7 +35,7 @@
     <div>Item 3</div>
   </vs-segmented-button>
   <span>{{modelSB}}</span>
-  <vs-segmented-button type="bar">
+  <vs-segmented-button class="bar">
     <div>Item 1</div>
     <div>Item 2</div>
     <div>Item 3</div>
