Add vs-scrollable directive support (example)

--- a/tests/list.html
+++ b/tests/list.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="angular.js"></script>
     <script type="text/javascript" src="angular-touch.js"></script>
 
+    <script type="text/javascript" src="../build/iscroll.js"></script>
     <script type="text/javascript" src="../build/vs_angular.js"></script>
     <link rel="stylesheet" type="text/css" href="../build/generic.css"></link>
     <link rel="stylesheet" type="text/css" href="../build/flat.css"></link>
@@ -32,7 +33,21 @@
       <li>item1.3</li>
     </vs-list>
 
-    <vs-list class="tab_list">
+    <vs-list class="tab_list" style="height:200px;" vs-scrollable>
+      <div>Item 1</div>
+      <li>item1.1</li>
+      <li>item1.2</li>
+      <li>item1.3</li>
+      <div>Item 2</div>
+      <li>item2.1</li>
+      <li>item2.2</li>
+      <div>Item 1</div>
+      <li>item1.1</li>
+      <li>item1.2</li>
+      <li>item1.3</li>
+      <div>Item 2</div>
+      <li>item2.1</li>
+      <li>item2.2</li>
       <div>Item 1</div>
       <li>item1.1</li>
       <li>item1.2</li>
