Add vs-scrollable directive support example

--- a/tests/images.html
+++ b/tests/images.html
@@ -2,6 +2,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     
+    <script type="text/javascript" src="../build/iscroll.js"></script>
     <script type="text/javascript" src="angular.js"></script>
     <script type="text/javascript" src="angular-touch.js"></script>
 
@@ -24,5 +25,6 @@
   <vs-image src="imageTest.jpg" strech="fill"></vs-image>
   <vs-image src="imageTest.jpg" strech="uniform"></vs-image>
   <vs-image src="imageTest.jpg" strech="uniform-fill"></vs-image>
+  <vs-image src="imageTest.jpg" vs-scrollable></vs-image>
 </body>
 </html>
