Change link to reference bower components

--- a/tests/images.html
+++ b/tests/images.html
@@ -3,8 +3,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     
     <script type="text/javascript" src="../build/iscroll.js"></script>
-    <script type="text/javascript" src="angular.js"></script>
-    <script type="text/javascript" src="angular-touch.js"></script>
+    <script type="text/javascript" src="../build/angular.js"></script>
+    <script type="text/javascript" src="../build/angular-touch.js"></script>
 
     <script type="text/javascript" src="../build/vs_angular.js"></script>
     <link rel="stylesheet" type="text/css" href="../build/generic.css"></link>
