Add TextArea example

--- a/tests/textInput.html
+++ b/tests/textInput.html
@@ -17,5 +17,8 @@
   <span>{{momo}}</span>
   <vs-text-input type="text" placeholder="Enter your text"></vs-text-input>
   <vs-text-input type="password"></vs-text-input>
+  <textarea class="vs_ui_textarea">
+    
+  </textarea>
 
 </body></html>
